# workflowSim

./: .Makefile.swp  .gitignore  CMakeLists.txt  Makefile  mmap.out  notes.txt  run  runclean  runmake  runmake_debug  runme  workflowProject.files  workflowProject.includes
doc/: mmapPinSimResults.txt
exe/: CMakeLists.txt  mmapPinSim.cpp  mmapSim.cpp  pinForkSim.cpp
include/: PinTunnel.h  TraceTunnel.h  macros.h  myCircularBuffer.h  mySSTMutex.h  testClass.h
pintools/: .Makefile.swp  .traceTest.cpp.swo  .traceTest.cpp.swp  CMakeLists.txt  Makefile  pin_log.rtf  sscRegionControl.cpp  traceTest.cpp  traceTool.cpp
pintools/include/: myCircularBuffer.h
recorded_errors/: error_2.rtf  error_part1.rtf
src/: .mmapPinSim.cpp.swp  .mmapSim.cpp.swo  .mmapSim.cpp.swp  .pinForkSim.cpp.swp  forkTest.cpp  mmapPinSim.cpp  mmapPinSim.cpp.autosave  mmapSim.cpp  pinForkSim.cpp
test/: Makefile  mmapRead  mmapRead.cpp  mmapReadTunnel  mmapReadTunnel.cpp  mmapWrite  mmapWrite.cpp  run  runclean  runmake
test/mmapWrite.dSYM/Contents/: Info.plist
test/mmapWrite.dSYM/Contents/Resources/DWARF/: mmapWrite
test/write/: Makefile  mmapWrite.cpp  mmapWriteTunnel  mmapWriteTunnel.cpp
